Added a mail kit service for token registration confirmation

--- a/IdentityEx/appsettings.json
+++ b/IdentityEx/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Email": {
+    "Server": "127.0.0.1",
+    "Port": 25,
+    "SenderName": "Roman",
+    "SenderEmail": "Test"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
