Added Authorization policy. Updated smtp server

--- a/IdentityEx/appsettings.json
+++ b/IdentityEx/appsettings.json
@@ -3,7 +3,7 @@
     "Server": "127.0.0.1",
     "Port": 25,
     "SenderName": "Roman",
-    "SenderEmail": "Test"
+    "SenderEmail": "test@testmail.com"
   },
   "Logging": {
     "LogLevel": {
